force-app/main/default/objects/Promociones__c/Promociones__c.object-meta.xml
<CustomObject>
    <description>El objeto Promoción contendrá la información de todas las promociones aplicables y a qué Centro/ residencia aplican.
También será empleado para registrar las promociones de la competencia.</description>
    <label>Promoción</label>
    <nameField>
        <label>Nombre de Promociones</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promociones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>