force-app/main/default/objects/Promociones__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <description>Si el día actual es mayor que la fecha de inicio y menor que la final está activa</description>
    <formula>IF( TODAY() &gt;  FechaInicio__c &amp;&amp;  TODAY() &lt;  FechaFin__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>