force-app/main/default/objects/Promociones__c/fields/Centro__c.field-meta.xml
<CustomField>
    <fullName>Centro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Puede ser un centro AMAVIR o un competidor</description>
    <label>Centro aplica</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Competidor</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroResidencia</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promociones</relationshipLabel>
    <relationshipName>Promociones</relationshipName>
    <type>Lookup</type>
</CustomField>