force-app/main/default/objects/Promociones__c/fields/DuracionPromocion__c.field-meta.xml
<CustomField>
    <fullName>DuracionPromocion__c</fullName>
    <description>Se calcula en función de la fecha de inicio y la de fin. Mostrar el resultado en meses</description>
    <formula>FechaFin__c - FechaInicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración de la promoción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>