force-app/main/default/objects/Promociones__c/fields/FechaFin__c.field-meta.xml
<CustomField>
    <fullName>FechaFin__c</fullName>
    <description>Fecha en la que finaliza la promoción</description>
    <label>Fecha Final</label>
    <type>Date</type>
</CustomField>