force-app/main/default/objects/Promociones__c/fields/FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>FechaInicio__c</fullName>
    <description>Fecha en la que entra en vigor la promoción</description>
    <label>Fecha inicio</label>
    <type>Date</type>
</CustomField>