force-app/main/default/objects/Promociones__c/fields/IdExternoCRM__c.field-meta.xml
<CustomField>
    <fullName>IdExternoCRM__c</fullName>
    <description>Identificador externo del CRM actual. Se usa para las cargas iniciales</description>
    <externalId>true</externalId>
    <label>Identificador del CRM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>