force-app/main/default/objects/Promociones__c/fields/Precio30Dias__c.field-meta.xml
<CustomField>
    <fullName>Precio30Dias__c</fullName>
    <description>Precio 30 días</description>
    <label>Precio 30 días</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>