force-app/main/default/objects/Promociones__c/fields/PrecioDia__c.field-meta.xml
<CustomField>
    <fullName>PrecioDia__c</fullName>
    <description>Precio al día</description>
    <label>Precio día</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>