force-app/main/default/objects/Promociones__c/fields/PromocionCompetidor__c.field-meta.xml
<CustomField>
    <fullName>PromocionCompetidor__c</fullName>
    <description>Si el centro elegido es un competidor</description>
    <formula>IF( Centro__r.RecordType.DeveloperName = &apos;Competidor&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoción competidor</label>
    <type>Checkbox</type>
</CustomField>