force-app/main/default/objects/Promociones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activa__c</columns>
    <columns>Centro__c</columns>
    <columns>DuracionPromocion__c</columns>
    <columns>FechaInicio__c</columns>
    <columns>FechaFin__c</columns>
    <columns>Precio30Dias__c</columns>
    <columns>PrecioDia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>