force-app/main/default/objects/Promociones__c/listViews/PROMOCIONES_ACTIVAS.listView-meta.xml
<ListView>
    <fullName>PROMOCIONES_ACTIVAS</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Activa__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PROMOCIONES ACTIVAS</label>
</ListView>