force-app/main/default/objects/Promociones__c/listViews/PromocionesCompetidores.listView-meta.xml
<ListView>
    <fullName>PromocionesCompetidores</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PromocionCompetidor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Promociones Competidores</label>
</ListView>